agnostics/cert-manager/aws/base/allow-letsencrypt-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-letsencrypt-egress
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toFQDNs:
        - matchPattern: "**.letsencrypt.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS-01 challenge propagation checks via public resolvers
    - toCIDR:
        - 1.1.1.1/32
        - 8.8.8.8/32
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
